[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Igor Lyutoev <ilyutoev@gmail.com>"]
description = "support-bot"
name = "support-bot"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "=11.1.0"
vk-api = "^11.7"
dialogflow = "^0.7.2"
[tool.poetry.dev-dependencies]
